<resources>
    <!-- String used for activity label -->
    <string name="title_activity_my_lists">MyLists</string>
    <string name="title_activity_see_wishes_in_list">My Wishes</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_amis">Amis</string>
    <string name="title_activity_profil">Profil</string>
    <string name="title_activity_main">Login/Register</string>
    <string name="title_activity_new_list">Create New List</string>
    <string name="title_activity_new_wish">Create New Wish</string>


    <!-- Other -->
    <string name="app_name">WishList</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="password_confirmation">Password confirmation</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="lists">Lists</string>
    <string name="amis">Amis</string>
    <string name="profil">Profil</string>


    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
